# softgroup

./: .eslintrc.json  .gitignore  docker-compose.yaml  next.config.ts  package-lock.json  package.json  tailwind.config.ts
backend/: Dockerfile  app.py  pyproject.toml  run.py
backend/app/: __init__.py  config.py  main.py  utils.py
backend/app/bot/: __init__.py  bot.py  inline_message_handler.py  send_file_to_telegram.py  send_message.py  session.py  states.py  webhook.py
backend/app/bot/filters/: admin_user.py
backend/app/core/: config.py  dependencies.py
backend/app/database/: base.py  models.py  session.py
backend/app/models/: __init__.py  template.py  user.py
backend/app/routers/: auth.py  categories.py  templates.py  users.py
backend/app/routes/: auth_routes.py  template_routes.py
backend/app/schemas/: category.py  image.py  template.py  user.py
backend/app/utils/: get_token.py  is_zipfile.py  save_image.py  save_template.py  send_file_to_telegram.py  set_cookie.py  slug.py  translate.py  translator.py
backend/migrations/: env.py
backend/migrations/versions/: 2024_12_29_0039_init_table.py  2024_12_29_0040_fix_foreign_keys.py  2024_12_29_0306_init_table.py  2024_12_30_0334_tables.py  2025_01_01_2138_tables.py  2025_01_04_2003_tables.py  2025_01_06_2345_tables.py  2025_01_08_0914_tables.py  2025_01_15_0953_tables.py  2025_01_16_1148_tables.py  2025_01_16_2339_tables.py  b654ededdc0e_.py  ce742f6e00c2_.py
backend/templates/Grid_Media-main/: style.css
backend/templates/string-26/: index.html
backend/templates/string-6/: style.css
(+163 files in other folders)
