[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["hojiakbar2806 <hojiakbarnasriddinov2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
flask-migrate = "^4.0.7"
flask-jwt-extended = "^4.7.1"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
